# Rust-Habit-Server

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2022-06-13-033452_create_users/: up.sql
migrations/2022-06-13-034705_create_frequencies/: down.sql  up.sql
migrations/2022-06-13-040246_create_days_enum/: down.sql  up.sql
migrations/2022-06-13-040255_create_habits/: up.sql
migrations/2022-06-13-042318_create_check_ins/: up.sql
src/: api.rs  data_access.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
