[package]
name = "rust_habit_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.9.0"
juniper = "0.13.1"
serde_derive = "1.0"
actix-web = "1.0.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2","numeric","chrono"] }
futures = "0.1"
env_logger = "0.6"
bufstream = "0.1.4"
chrono = {version = "0.4", features = ["serde"]}
log = "0.4"
pretty_env_logger = "0.3"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
